--- a/service-frontend/src/styles.css
+++ b/service-frontend/src/styles.css
@@ -1,4 +1,4 @@
-.icon { 
+.logo { 
   font-size: 72px; 
   color: darkblue; 
 }
@@ -10,4 +10,15 @@
 }
 .custom-control-label {
   margin-left: 8px;
+  padding-top: 1px;
+}
+.delete {
+  float: right;
+  font-size: 1.3em;
+  padding-top: 4px;
+  color: lightgrey;
+}
+.delete:hover {
+  color: red;
+  cursor: pointer;
 }
