--- a/service-frontend/src/app.component.html
+++ b/service-frontend/src/app.component.html
@@ -1,10 +1,12 @@
-<div class="py-5 text-center">
-  <i class="material-icons logo">done_all</i>
-  <h2>Task list app</h2>
-</div>
+<div class="container">
 
-<ul class="list-group">
-  <li class="list-group-item list-group-item-action" *ngFor="let task of tasks">
+  <div class="py-5 text-center">
+    <i class="material-icons logo">done_all</i>
+    <h2>Task list app</h2>
+  </div>
+      
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-action" *ngFor="let task of tasks">
       <div class="custom-control custom-checkbox">
         <input type="checkbox" class="custom-control-input" 
           id="chk{{ task._id }}" [checked]="task.done">
@@ -14,9 +16,20 @@
         </label>
         <i class="material-icons delete" (click)="delete(task._id)">delete</i>
       </div>
-  </li>  
-  <li class="list-group-item">
-    <input type="text" class="form-control" placeholder="Add new task..." 
-      (keypress)="keypress($event)" [(ngModel)]="newTask">
-  </li>
-</ul>
+    </li>  
+    <li class="list-group-item">
+      <input type="text" class="form-control" placeholder="Add new task..." 
+        (keypress)="keypress($event)" [(ngModel)]="newTask">
+    </li>
+  </ul>
+
+  <footer class="my-5 text-muted text-center text-small">
+    <p class="mb-1">&copy; 2018 Wouter Devinck</p>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="https://github.com/wouterdevinck/microservices-demo">Source code</a></li>
+      <li class="list-inline-item">-</li>
+      <li class="list-inline-item"><a href="https://www.apache.org/licenses/LICENSE-2.0">License</a></li>
+    </ul>
+  </footer>
+
+</div>
