--- a/service-frontend/src/styles.css
+++ b/service-frontend/src/styles.css
@@ -12,6 +12,9 @@
   margin-left: 8px;
   padding-top: 1px;
 }
+.custom-control-input:disabled~.custom-control-label {
+  color: black;
+}
 .delete {
   float: right;
   font-size: 1.3em;
