--- a/k8s/task-app.tmpl
+++ b/k8s/task-app.tmpl
@@ -20,7 +20,7 @@ spec:
               protocol: TCP
           env:
             - name: DB_URL
-              value: mongodb://gr01:xxx@cluster0-shard-00-00-ryvxn.mongodb.net:27017,cluster0-shard-00-01-ryvxn.mongodb.net:27017,cluster0-shard-00-02-ryvxn.mongodb.net:27017/gr01?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin
+              value: mongodb://${USERNAME}:${PASSWORD}@cluster0-shard-00-00-ryvxn.mongodb.net:27017,cluster0-shard-00-01-ryvxn.mongodb.net:27017,cluster0-shard-00-02-ryvxn.mongodb.net:27017/${USERNAME}?ssl=true&replicaSet=Cluster0-shard-0&authSource=admin
 ---
 apiVersion: apps/v1beta1
 kind: Deployment
@@ -74,10 +74,10 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: task-api
+  name: task-app
 spec:
   rules:
-    - host: tasks-gr01.k8s.me
+    - host: tasks-${USERNAME}.k8s.me
       http:
         paths:
           - backend:
